--- a/Vit.Http.ChunkUpload/Demo/Vit.Http.ChunkUpload.Demo/wwwroot/index.html
+++ b/Vit.Http.ChunkUpload/Demo/Vit.Http.ChunkUpload.Demo/wwwroot/index.html
@@ -20,7 +20,7 @@
         //chunkUpload.chunkSize = 1 * 1024 * 1024;
 
         //上传文件的地址
-        chunkUpload.url = '/upload/uploadByMemory';
+        chunkUpload.url = '/upload/uploadToMemory';
 
         chunkUpload.deferred
             .reset()
@@ -56,7 +56,7 @@
         //chunkUploadByTempDir.chunkSize = 1 * 1024 * 1024;
 
         //上传文件的地址
-        chunkUploadByTempDir.url = '/upload/uploadByTempDir';
+        chunkUploadByTempDir.url = '/upload/uploadToTempDir';
 
         chunkUploadByTempDir.deferred
             .reset()
